# HDLOpt

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  adder_subtractor.html  advanced_hazard_detection_unit.html  apb_arbiter.html  apb_bridge.html  apb_decoder.html  apb_error_handler.html  apb_master.html  apb_slave.html  apb_top.html  array_multiplier.html  async_fifo.html  async_fifo_depth_16.html  async_fifo_depth_32.html  async_fifo_depth_64.html  asynchronous_bram.html  asynchronous_counter.html  asynchronous_dram.html  asynchronous_interrupt_controller.html  asynchronous_irom.html  asynchronous_ram.html  asynchronous_rom.html  asynchronous_shift_register.html  asynchronous_sram.html  axi_arbiter.html  axi_bridge.html  axi_decoder.html  axi_fabric.html  axi_interconnect.html  axi_lite_master.html  axi_lite_slave.html  axi_master.html  axi_slave.html  (+297 more)
.github/: module_documentation_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  module-implementation.yml
.github/scripts/: auto_verify.py  generate_pages.py  setup_modules.py  update_module_status.py  update_status.py  verify_module.py
.github/templates/: index.html.j2  module.html.j2  status.html.j2
.github/workflows/: ci.yml  code-quality.yml  deploy-pages.yml  module-setup.yml  publish.yml  update-status.yml  verify-modules.yml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  (+198 more)
benchmarking/: arithmetic_shifter_table_data.json  benchmarking.ipynb  benchmarking.py  carry_save_adder_l2_table_data.json  carry_skip_adder_table_data.json  conditional_shifter_table_data.json  full_subtractor_table_data.json  half_adder_table_data.json  logic_shifter_table_data.json  mcc_adder_table_data.json  netlist.py  ripple_carry_adder_table_data.json  skip_logic_table_data.json  timing_data.json  vivado.jou
benchmarking/.ipynb_checkpoints/: benchmarking-checkpoint.ipynb
benchmarking/src/: adder_subtractor.v  alu.v  and2.v  and3.v  arithmetic_shifter.v  array_multiplier.v  big_circle.v  booth_multiplier.v  booth_substep.v  booth_substep_8.v  borrow_lookahead_subtractor.v  carry_logic.v  carry_lookahead_adder.v  carry_lookahead_subtractor.v  carry_save_adder.v  carry_save_adder_l2.v  carry_select_adder.v  carry_skip_adder.v  carry_skip_block.v  csa.v  csa_16bit.v  demultiplexer_1_2.v  demultiplexer_1_4.v  demultiplexer_1_8.v  df.v  dfr.v  dfrl.v  full_adder.v  full_subtractor.v  half_subtractor.v  invert.v  kogge_stone_adder.v  logic_shifter.v  mcc_adder.v  multiplexer_2_1.v  multiplexer_4_1.v  multiplexer_8_1.v  nand2.v  nand3.v  nonrestoring_divider.v  (+16 more)
benchmarking/vivado/: full_adder_project.xpr  timing_summary.rpt  vivado_script.tcl
design_gen/: design_gen.code-workspace  design_gen.ipynb
design_gen/.ipynb_checkpoints/: design_gen-checkpoint.ipynb
docs/: conf.py  index.rst  requirements.txt
ds_exp/: alu.v  ds_exp.ipynb
ds_exp/.ipynb_checkpoints/: ds_exp-checkpoint.ipynb
hdlopt/: __main__.py  config_manager.py  runner.py  utils.py
hdlopt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hdlopt/benchmarking/: array_multiplier_project.xpr  array_multiplier_table_data.json  borrow_lookahead_subtractor_table_data.json  carry_lookahead_adder_table_data.json  carry_select_adder_table_data.json  compile_alu.sh  eight_bit_adder_subtractor_table_data.json  full_adder_table_data.json  half_subtractor_table_data.json  hierarchy.json  netlist.json  power_data.json  ripple_carry_subtractor_table_data.json  run_modelsim.tcl  run_single_testbench_timing_logs.json  script.ys  transcript  xor2_table_data.json
hdlopt/patterns/: base.py  regex.py  (+2 more)
patterns/: regex.py  string_match.py  substring.py
rules/: adder_rule.py  adder_subtractor_rule.py  arithmetic_shifter_rule.py  base.py  conditional_shifter_rule.py  counter_rule.py  csa_l2_rule.py  factory.py  prefix_sum_logic_rule.py  skip_logic_rule.py  square_rule.py  triangle_rule.py  xor2_rule.py
scripts/: check.sh  config.py  directory_structure.py  experiment_manager.py  format.sh  parser.py
src/: half_adder.v
tests/: test_analysis_resource.py  test_analysis_templates.py  test_analysis_waveform.py  test_directory_structure.py  test_parser.py  test_parsing_exceptions.py  test_parsing_utils.py  test_patterns.py  test_rules.py  test_runner.py  test_setup.py  test_tb_gen.py  test_tb_run_iverilog.py  test_tb_runner.py
(+1659 files in other folders)
