[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hdlopt"
version = "0.1.0"
description = "Comprehensive HDL Design Analysis Tool"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Uzair Gheewala", email = "uzairgheewala474@gmail.com"}
]

dependencies = [
    "pyvips",
    "fusesoc",
    "jinja2",
    "ply",
    "pyverilog",
    "numpy",
    "pandas",
    "matplotlib",
    "deap",
    "cocotb",
    "simpy",
    "vunit-hdl",
    "networkx",
    "pyreadline3",
    "ipython-genutils",
    "reportlab",
    "pymupdf",
    "pyvcd",
    "graphviz",
    "vcd",
    "tenacity"
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "flake8",
]

[project.scripts]
hdlopt = "hdlopt.runner:run"

[tool.pytest]
testpaths = ["hdlopt/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=hdlopt"

[project.urls]
Homepage = "https://github.com/uzairgheewala/hdlopt"
Documentation = "https://hdlopt.readthedocs.io/"

[tool.setuptools]
include-package-data = true
packages = ["hdlopt", "hdlopt.scripts"]