[metadata]
name = hdlopt
version = attr: hdlopt.__version__
author = Your Name
author_email = your.email@example.com
description = Comprehensive HDL optimization and analysis toolset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/hdlopt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19.0
    matplotlib>=3.3.0
    pandas>=1.2.0
    # Add other dependencies

[options.packages.find]
exclude =
    tests*
    docs*